fotter altered again and navbar adjusted

--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                 Our no-strings attached free trial lets you test our product today.</a>
             </div>
           <div class="input-field d-flex align-item-flex-start input-stretch">
-            <input class="d-flex input-field-text" placeholder="Enter your email">
+            <input class="d-flex input-field-text " placeholder="Enter your email">
             <button class="btn btn-primary btn-call-action d-flex justify-content-center align-item-center">Submit</button>
           </div>
         </div>
@@ -844,7 +844,7 @@
       <div class="links">
         <div class="horizontal-container horizontal-container-links row">
         
-          <div class="Vertical-Container Vertical-Container-links col-lg col-md-6">
+          <div class="Vertical-Container Vertical-Container-links col-lg col-md-6 col-sm-6">
             <div class="footer-links">
               <a class="footer-heading">Products</a>
             </div>
@@ -866,7 +866,7 @@
               </div>
             </div>
           </div>
-          <div class="Vertical-Container Vertical-Container-links  col-lg col-md-6">
+          <div class="Vertical-Container Vertical-Container-links  col-lg col-md-6 col-sm-6">
             <div class="footer-links">
               <a class="footer-heading">Products</a>
             </div>
@@ -888,7 +888,7 @@
               </div>
             </div>
           </div>
-          <div class="Vertical-Container Vertical-Container-links">
+          <div class="Vertical-Container Vertical-Container-links col-md-6 col-sm-6 ">
             <div class="footer-links">
               <a class="footer-heading">Products</a>
             </div>
@@ -910,7 +910,7 @@
               </div>
             </div>
           </div>
-            <div class="Vertical-Container Vertical-Container-links">
+          <div class="Vertical-Container Vertical-Container-links col-md-6 col-sm-6">
               <div class="footer-links">
                 <a class="footer-heading">Resources</a>
               </div>
@@ -928,8 +928,8 @@
                   <a class="links-details">Apps</a>
                 </div>
               </div>
-            </div>
-            <div class="Vertical-Container Vertical-Container-links">
+          </div>
+          <div class="Vertical-Container Vertical-Container-links col-sm">
               <div class="footer-links">
                 <a class="footer-heading">Company</a>
               </div>
@@ -941,7 +941,7 @@
                   <a class="links-details">Leadership</a>
                 </div>
               </div>
-            </div>
+          </div>
 
           
         </div>
