--- a/index.html
+++ b/index.html
@@ -840,7 +840,9 @@
       </div>
     </div>
 
-    <footer class="footer-div">
+    <!-- <div class="d-flex justify-content-center"> -->
+
+    <div class="footer-div">
       <div class="links">
         <div class="horizontal-container horizontal-container-links row">
         
@@ -951,7 +953,7 @@
         <div class="content content-footer">
           <img src="Company Logo.png">
           <a class="links-details">© 2023 Lookscout. All Rights Reserved.</a>
-          <div class="social-icons">
+          <div class="social-icons-footer">
             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
               <g clip-path="url(#clip0_417_26281)">
               <path d="M24.5 12C24.5 5.37258 19.1274 0 12.5 0C5.87258 0 0.5 5.37258 0.5 12C0.5 17.9895 4.8882 22.954 10.625 23.8542V15.4688H7.57812V12H10.625V9.35625C10.625 6.34875 12.4166 4.6875 15.1576 4.6875C16.4701 4.6875 17.8438 4.92188 17.8438 4.92188V7.875H16.3306C14.84 7.875 14.375 8.80008 14.375 9.75V12H17.7031L17.1711 15.4688H14.375V23.8542C20.1118 22.954 24.5 17.9895 24.5 12Z" fill="white"/>
@@ -994,8 +996,8 @@
 
         </div>
       </div>                                                                                                                                                         
-    </footer>
-
+    <!-- </div> -->
+  </div>
 
 </body>
 </html>
